@@ -1,6 +1,7 @@
 Revision history for Perl extension Util::H2O.
 
 0.16	not yet released
+	- allowed "-classify" into current package
 	- added "Cookbook" to documentation
 
 0.14	Mon, Aug  2 2021
